@@ -63,6 +63,9 @@ public class TestImplicitNullChecks {
         TestFramework.runWithFlags("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
                                    "-XX:CompileCommand=inline,java.lang.ref.*::*",
                                    "-XX:-TieredCompilation");
+        TestFramework.runWithFlags("--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED",
+                                   "-XX:CompileCommand=inline,java.lang.ref.*::*",
+                                   "-XX:+TieredCompilation", "-XX:TieredStopAtLevel=1");
     }
 
     @Test
